--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
+<link href="css/styles.css" rel="stylesheet">
   </head>
 <body id="main">
   <h1 id="title">"Diana Rapp Tribute"</h1>
