adds new font, turns css styling on ids into classes, changes photo and photo placement

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
   <head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet">
   </head>
-<body id="main">
-  <h1 id="title">"Diana Rapp Tribute"</h1>
+<body id="main" class="main">
+  <h1 id="title" class="title">"Diana Rapp Tribute"</h1>
   <div id="img-div">
-   <img id="image" src="https://assets.codepen.io/2137444/ValentineSunshine.jpg" />
-   <p id="img-caption">Diana holds her sweet new born baby.  She is known to all as a diligent and doting mother.</p>
+   <img id="image" src="assets\PrincessDiBW.jpg" />
+   <p id="img-caption" class="img-caption">Diana holds her sweet new born baby.  She is known to all as a diligent and doting mother.</p>
   </div>
   <p id="tribute-info" class="tribute-info">Diana is many things, including the following:
   </p>
