gets JS to take off the gold stroke on the CSS, still need to get the transitiion smoothed out

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <li>...And is the most amazing person I know...</li>
     </ul>
     <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
+      <script src="./js/scripts.js"></script>
   </body>
 
 
