fixes the flow issue so all containers now in the correct flow

--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
       <img id="image" src="assets\PrincessDiBW.jpg" />
       <caption id="img-caption" class="img-caption">Diana holds her sweet new born baby. She is known to all as a diligent and doting mother.</caption>
     </div>
-    <p id="tribute-info" class="tribute-info">Diana is many things, including the following:
-    </p>
-    <ul>
-      <li>An Amazing Mother of 6 children</li>
-      <li>An accomplished Ballerina</li>
-      <li>A soon to be R.N.</li>
-      <li>A COVID survivor</li>
-      <li>An earthquake survivor</li>
-      <li>A teacher</li>
-      <li>Her motto is: "If your head and your heart are moving in the right direction, then you don't have to worry about your feet!"
-      <li>...And is the most amazing person I know...</li>
-    </ul>
+    <div class="container">
+      <p id="tribute-info" class="tribute-info">Diana is many things, including the following:</p>
+    </div>
+    <div class="container">
+      <ul>
+        <li>An Amazing Mother of 6 children</li>
+        <li>An accomplished Ballerina</li>
+        <li>A soon to be R.N.</li>
+        <li>A COVID survivor</li>
+        <li>An earthquake survivor</li>
+        <li>A teacher</li>
+        <li>Her motto is: "If your head and your heart are moving in the right direction, then you don't have to worry about your feet!"
+        <li>...And is the most amazing person I know...</li>
+      </ul>
+    </div>
+
     <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
       <script src="./js/scripts.js"></script>
   </body>
