--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 
-  <head>
-    <link href="css/styles.css" rel="stylesheet">
-  </head>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Monda" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+</head>
 
-  <body id="main" class="main">
-    <h1 id="title" class="title">Diana M. Rapp</h1>
-    <div class="svg-container">
+<body id="main" class="main">
+  <h1 id="title" class="title">Diana M. Rapp</h1>
+  <div class="svg-container">
     <svg id="logo" width="1256" height="371" viewBox="0 0 1256 371" fill="none" xmlns="http://www.w3.org/2000/svg">
       <mask id="path-1-outside-1_6_6" maskUnits="userSpaceOnUse" x="0.534424" y="0.712952" width="1256" height="370" fill="black">
         <rect fill="white" x="0.534424" y="0.712952" width="1256" height="370" />
@@ -42,29 +43,151 @@
       <path class="path" d="M1212.46 174.504C1212.85 175.272 1212.85 176.52 1212.46 178.248C1212.27 179.976 1212.85 180.936 1214.19 181.128C1217.07 180.168 1219.76 178.44 1222.25 175.944C1224.94 173.256 1227.34 170.568 1229.45 167.88C1232.72 163.464 1235.41 158.568 1237.52 153.192C1239.82 147.624 1240.01 141.096 1238.09 133.608C1230.22 138.216 1223.79 144.456 1218.8 152.328C1213.81 160.008 1209.2 167.976 1204.97 176.232C1200.56 184.68 1196.72 193.416 1193.45 202.44C1190.19 211.464 1186.93 220.872 1183.66 230.664C1180.59 240.072 1177.52 249.672 1174.45 259.464C1171.37 269.256 1168.97 279.336 1167.25 289.704C1166.29 295.272 1165.52 300.84 1164.94 306.408C1164.37 312.168 1163.69 317.832 1162.93 323.4C1161.97 330.312 1160.91 337.128 1159.76 343.848C1158.61 350.76 1157.74 357.864 1157.17 365.16C1154.67 365.544 1152.75 365.256 1151.41 364.296C1149.87 363.528 1148.72 362.28 1147.95 360.552C1146.99 359.016 1146.22 357.192 1145.65 355.08C1145.07 353.16 1144.49 351.336 1143.92 349.608C1143.53 340.2 1144.21 331.56 1145.93 323.688C1147.66 315.816 1149.58 307.752 1151.69 299.496C1153.42 292.776 1154.86 286.152 1156.01 279.624C1157.17 273.096 1158.22 266.376 1159.18 259.464C1159.57 255.624 1160.24 251.784 1161.2 247.944C1162.16 244.104 1162.83 240.264 1163.21 236.424C1164.17 228.36 1165.04 220.392 1165.81 212.52C1166.57 204.648 1167.25 196.584 1167.82 188.328C1168.59 181.032 1169.55 173.64 1170.7 166.152C1171.85 158.472 1172.14 150.312 1171.57 141.672C1174.83 141.096 1177.52 141.672 1179.63 143.4C1181.74 144.936 1183.28 147.048 1184.24 149.736C1183.47 158.76 1182.7 167.784 1181.93 176.808C1181.36 185.64 1180.59 194.376 1179.63 203.016C1183.47 193.224 1187.79 183.528 1192.59 173.928C1197.39 164.136 1202.57 155.112 1208.14 146.856C1211.21 142.44 1214.48 138.216 1217.93 134.184C1221.58 129.96 1226.48 127.368 1232.62 126.408C1236.08 126.6 1238.96 127.368 1241.26 128.712C1243.57 130.056 1245.68 131.688 1247.6 133.608C1247.98 134.952 1248.46 136.2 1249.04 137.352C1249.81 138.312 1250.38 139.56 1250.77 141.096C1251.34 149.736 1250 157.608 1246.73 164.712C1243.47 171.816 1239.73 177.864 1235.5 182.856C1234.73 183.816 1233.68 184.968 1232.33 186.312C1231.18 187.464 1229.84 188.616 1228.3 189.768C1226.96 190.92 1225.52 191.976 1223.98 192.936C1222.64 193.896 1221.29 194.376 1219.95 194.376C1218.41 194.376 1216.78 193.704 1215.05 192.36C1213.52 190.824 1212.27 189 1211.31 186.888C1210.35 184.776 1209.87 182.664 1209.87 180.552C1209.87 178.248 1210.73 176.232 1212.46 174.504Z" stroke="url(#myGradient)" stroke-width="3" mask="url(#path-1-outside-1_6_6)" />
     </svg>
   </div>
-    <div id="img-div" class="img-div">
-      <img id="image" src="assets\PrincessDiBW.jpg" />
-      <caption id="img-caption" class="img-caption">Diana holds her sweet new born baby. She is known to all as a diligent and doting mother.</caption>
-    </div>
-    <div class="container">
-      <p id="tribute-info" class="tribute-info">Diana is many things, including the following:</p>
-    </div>
-    <div class="container">
-      <ul>
-        <li>An Amazing Mother of 6 children</li>
-        <li>An accomplished Ballerina</li>
-        <li>A soon to be R.N.</li>
-        <li>A COVID survivor</li>
-        <li>An earthquake survivor</li>
-        <li>A teacher</li>
-        <li>Her motto is: "If your head and your heart are moving in the right direction, then you don't have to worry about your feet!"
-        <li>...And is the most amazing person I know...</li>
-      </ul>
-    </div>
+  <div id="img-div" class="img-div">
+    <img id="image" src="assets\PrincessDiBW.jpg" />
+    <caption id="img-caption" class="img-caption">Diana holds her sweet new born baby. She is known to all as a diligent and doting mother.</caption>
+  </div>
+  <div class="container">
+    <p id="tribute-info" class="tribute-info">Diana is many things, including the following:</p>
+  </div>
+  <div class="container">
+    <main>
+      <div class="card">
+        <h3>Birth</h3>
+        <p>1985: Born in Murray, Utah</p>
+      </div>
+      <div class="card">
+        <h3>Early Life</h3>
+        <p>1990 - Diana's family moved to Las Vegas, Nevada where she grew up</p>
+      </div>
+      <div class="card">
+        <h3>Begins Dancing Career</h3>
+        <p>1997 - started dancing at Bunker Dance Center where she continued her training and competed in Dance Competitions for the next 8 years.</p>
+      </div>
+      <div class="card">
+        <h3>High School</h3>
+        <p>2004 - graduated from Bonanza High School in Las Vegas, NV. Taught dance at Bunker Dance Center for one year.</p>
+      </div>
+      <div class="card">
+        <h3>College</h3>
+        <p>2005 - attended Utah Valley State College in Orem, Utah for one semester. Majored in Dance and was a member of the Dance Team.</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2006 - performed in "Seven Brides for Seven Brothers", her first musical for the St. George Musical Theater. This was the beginning
+        of her performing regularly for the theater for the next 2 years. Also, started teaching dance at a local studio which was the start of her teaching of 15+ years.</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2007 - attended Dixie State College in St. George, Utah for two semesters. She majored in Dance and was a member of the Dance Company.
+          She also won the student of the year award for the Dance Department.</p>
+      </div>
+      <div class="card">
+        <h3>Marriage</h3>
+        <p>2008 - Married her first husband<p>
+      </div>
+      <div class="card">
+        <h3>Gave birth to her first son<h3>
+        <p></p>
+      </div>
+      <div class="card">
+        <h3>Broadway Debut</h3>
+        <p>2010 - performed in the musical, CATS, at Tuacahn Theater in St. George, Utah.</p>
+      </div>
+      <div class="card">
+        <h3>Divorce</h3>
+        <p>2017 - got divorced from her first husband</p>
+      </div>
+      <div class="card">
+        <h3>Second Child</h3>
+        <p>2013 - gave birth to her daughter</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2018 - attended Pathways - BYU-Idaho college, began new job working at the Jordan River Temple as well as started teaching Ballet at a local Ballet studio.</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2019 - attended LDS Business College for 3 semesters</p>
+      </div>
+      <div class="card">
+        <h3>New Love</h3>
+        <p>2019 - meets the love of her life</p>
+      </div>
+      <div class="card">
+        <h3>Engagement</h3>
+        <p>2019 - one month later he couldn't wait any longer, so underneath a star-filled, summer night, on the backyard trampoline he proposes to her</p>
+      </div>
+      <div class="card">
+        <h3>Marriage</h3>
+        <p>2019 - just two days short of two months after meeting, she and her husband get married in the bishop's office with only her, her husband, the bishop, and her two children attendng</p>
+      </div>
+      <div class="card">
+        <h3>New Family</h3>
+        <p>2019 - becomes a step-parent to three beautiful girls</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2019 - lived in West Jordan, Utah</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2019 - Her husband's car breaks down so for three months they have to take turns taking the car to work or school while the other takes the train</p>
+      </div>
+      <div class="card">
+        <h3>Tragedy</h3>
+        <p>2020 - Hold's her sister's hand as she struggles with the loss of her second child</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2020 - gives up her lovely 3rd story apartment with a view of the mountains for a basement apartment with cheaper rent and larger space</p>
+      </div>
+      <div class="card">
+        <h3>Pandemic</h3>
+        <p>2020 - the pandemic forces her to learn to home school her children, while getting cut off from her own professors and having to pivot to a virtual
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2020 - finds out that 5 months into her marriage, amidst adjusting to a new family, she will be bringing child number 6 into her your's-mine-and-ours family</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2020 - began school at Salt Lake Community College to prepare for Nursing School.</p>
+      </div>
+      <div class="card">
+        <h3>Natural Disaster</h3>
+        <p>2020 - survives a 6.5 earthquake</p>
+      </div>
+      <div class="card">
+        <h3>Child Number 6!</h3>
+        <p>2020 - gives birth to a beautiful baby girl!</p>
+      </div>
+      <div class="card">
+        <h3>Pandemic</h3>
+        <p>2020 - COVID restrictions get lifted allowing her and her husband and baby girl to get sealed together in the Jordan River Temple</p>
+      </div>
+      <div class="card">
+        <h3>Finally a Real Honeymoon</h3>
+        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>2021 - persists through mothering, step-mothering, and schooling alone while husband deploys with the Army</p>
+      </div>
+      <div class="card">
+        <h3>More Tragedy</h3>
+        <p>2021 - remains strong during the loss of her father-in-law, with whom she had a very close relationship</p>
+      </div>
+      <div class="card">
+        <h3>Conquering</h3>
+        <p>2021 - Finishes last prerequisite for nursing school just short of an 'A' even while she and her family were plagued by COVID-19 for a month.</p>
+      </div>
+    </main>
+      </div>
 
-    <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
-      <script src="./js/scripts.js"></script>
-  </body>
+            <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
+            <script src="./js/scripts.js"></script>
+          </body>
 
 
-</html>
+          </html>
