--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 </head>
 
 <body id="main" class="main">
-  <h1 id="title" class="title">Diana M. Rapp</h1>
+  <div class="background-gradient">
+    <h1 id="title" class="title">Diana M. Rapp</h1>
+  </div>
+  <div class="down-arrow">
+    <div class="inner-arrow">
+    </div>
+  </div>
   <div class="svg-container">
     <svg id="logo" width="1256" height="371" viewBox="0 0 1256 371" fill="none" xmlns="http://www.w3.org/2000/svg">
       <mask id="path-1-outside-1_6_6" maskUnits="userSpaceOnUse" x="0.534424" y="0.712952" width="1256" height="370" fill="black">
