--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="background-gradient">
     <h1 id="title" class="title">Diana M. Rapp</h1>
   </div>
-  <div class="down-arrow">
+  <div class="down-arrow" id="button">
     <div class="inner-arrow">
     </div>
   </div>
@@ -58,133 +58,136 @@
   </div>
   <div class="container">
     <main>
-      <div class="card">
+      <div class="card" id="event_1">
         <h3>Birth</h3>
         <p>1985: Born in Murray, Utah</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_2">
         <h3>Early Life</h3>
         <p>1990 - Diana's family moved to Las Vegas, Nevada where she grew up</p>
+        <div class="vegas">
+          <img src="./assets/Las_Vegas_City_Map_Panoramic_Graphic_Art.jpg" class="img-vegas">
+        </div>
       </div>
-      <div class="card">
+      <div class="card" id="event_3">
         <h3>Begins Dancing Career</h3>
         <p>1997 - started dancing at Bunker Dance Center where she continued her training and competed in Dance Competitions for the next 8 years.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_4">
         <h3>High School</h3>
         <p>2004 - graduated from Bonanza High School in Las Vegas, NV. Taught dance at Bunker Dance Center for one year.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_5">
         <h3>College</h3>
         <p>2005 - attended Utah Valley State College in Orem, Utah for one semester. Majored in Dance and was a member of the Dance Team.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_6">
         <h3></h3>
         <p>2006 - performed in "Seven Brides for Seven Brothers", her first musical for the St. George Musical Theater. This was the beginning
         of her performing regularly for the theater for the next 2 years. Also, started teaching dance at a local studio which was the start of her teaching of 15+ years.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_7">
         <h3></h3>
         <p>2007 - attended Dixie State College in St. George, Utah for two semesters. She majored in Dance and was a member of the Dance Company.
           She also won the student of the year award for the Dance Department.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_8">
         <h3>Marriage</h3>
         <p>2008 - Married her first husband<p>
       </div>
-      <div class="card">
+      <div class="card" id="event_9">
         <h3>Gave birth to her first son<h3>
         <p></p>
       </div>
-      <div class="card">
+      <div class="card" id="event_10">
         <h3>Broadway Debut</h3>
         <p>2010 - performed in the musical, CATS, at Tuacahn Theater in St. George, Utah.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_11">
         <h3>Divorce</h3>
         <p>2017 - got divorced from her first husband</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_12">
         <h3>Second Child</h3>
         <p>2013 - gave birth to her daughter</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_13">
         <h3></h3>
         <p>2018 - attended Pathways - BYU-Idaho college, began new job working at the Jordan River Temple as well as started teaching Ballet at a local Ballet studio.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_14">
         <h3></h3>
         <p>2019 - attended LDS Business College for 3 semesters</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_15">
         <h3>New Love</h3>
         <p>2019 - meets the love of her life</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_16">
         <h3>Engagement</h3>
         <p>2019 - one month later he couldn't wait any longer, so underneath a star-filled, summer night, on the backyard trampoline he proposes to her</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_17">
         <h3>Marriage</h3>
         <p>2019 - just two days short of two months after meeting, she and her husband get married in the bishop's office with only her, her husband, the bishop, and her two children attendng</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_18">
         <h3>New Family</h3>
         <p>2019 - becomes a step-parent to three beautiful girls</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_19">
         <h3></h3>
         <p>2019 - lived in West Jordan, Utah</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_20">
         <h3></h3>
         <p>2019 - Her husband's car breaks down so for three months they have to take turns taking the car to work or school while the other takes the train</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_21">
         <h3>Tragedy</h3>
         <p>2020 - Hold's her sister's hand as she struggles with the loss of her second child</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_22">
         <h3></h3>
         <p>2020 - gives up her lovely 3rd story apartment with a view of the mountains for a basement apartment with cheaper rent and larger space</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_23">
         <h3>Pandemic</h3>
         <p>2020 - the pandemic forces her to learn to home school her children, while getting cut off from her own professors and having to pivot to a virtual
       </div>
-      <div class="card">
+      <div class="card" id="event_24">
         <h3></h3>
         <p>2020 - finds out that 5 months into her marriage, amidst adjusting to a new family, she will be bringing child number 6 into her your's-mine-and-ours family</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_25">
         <h3></h3>
         <p>2020 - began school at Salt Lake Community College to prepare for Nursing School.</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_26">
         <h3>Natural Disaster</h3>
         <p>2020 - survives a 6.5 earthquake</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_27">
         <h3>Child Number 6!</h3>
         <p>2020 - gives birth to a beautiful baby girl!</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_28">
         <h3>Pandemic</h3>
         <p>2020 - COVID restrictions get lifted allowing her and her husband and baby girl to get sealed together in the Jordan River Temple</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_29">
         <h3>Finally a Real Honeymoon</h3>
         <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_30">
         <h3></h3>
         <p>2021 - persists through mothering, step-mothering, and schooling alone while husband deploys with the Army</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_31">
         <h3>More Tragedy</h3>
         <p>2021 - remains strong during the loss of her father-in-law, with whom she had a very close relationship</p>
       </div>
-      <div class="card">
+      <div class="card" id="event_32">
         <h3>Conquering</h3>
         <p>2021 - Finishes last prerequisite for nursing school just short of an 'A' even while she and her family were plagued by COVID-19 for a month.</p>
       </div>
@@ -193,6 +196,7 @@
 
             <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
             <script src="./js/scripts.js"></script>
+            <script src="./js/button.js"></script>
           </body>
 
 
