enhances buttons functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body id="main" class="main">
-  <div class="background-gradient">
+  <div class="background-gradient" id="event_0">
     <h1 id="title" class="title">Diana M. Rapp</h1>
   </div>
   <div class="down-arrow" id="button">
