--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
             <script src="./js/scripts.js"></script>
             <script src="./js/button.js"></script>
+            <script src="./js/visibility.js"></script>
           </body>
 
 
