tries to add a observer for the button in case someone scrolls down so the button will take you all the way back up. WIP.  Also fixes some unclosed html tags

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
       </div>
       <div class="card" id="event_8">
         <h3>Marriage</h3>
-        <p>2008 - Married her first husband<p>
+        <p>2008 - Married her first husband</p>
       </div>
       <div class="card" id="event_9">
-        <h3>Gave birth to her first son<h3>
+        <h3>Gave birth to her first son</h3>
         <p></p>
       </div>
       <div class="card" id="event_10">
