adds new assets, places them in html

--- a/index.html
+++ b/index.html
@@ -182,29 +182,47 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_27">
         <h3>Natural Disaster</h3>
-        <p>2020 - survives a 6.5 earthquake</p>
+        <p>2020 - survives a 6.5 earthquake. Deseret News would report, 'An early morning 5.7 magnitude earthquake centered near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region. Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks. The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced, but perhaps miraculously, no fatalities or serious injuries resulted.'</p>
       </div>
       <div class="card" id="event_28">
+        <h3>Riots</h3>
+        <p>In the wake of the George Floyd killings, riots would erupt across the entire United States.  For the first time in memory, rioters would hit Salt Lake City where police cars would be overturned and set on fire, looters would be threatened by a mad man with a bow and arrow, and in Provo an elderly man would be shot repeatedly by rioters as he tried to maneuver past a road block.</p>
+      </div>
+      <div class="card" id="event_29">
+        <h3>Presidential Elections</h3>
+        <p>Presidential Elections would be historic in seeing the first Black woman Vice-President, but would also lead to a near coup d'é·tat as rioters ransacked the nations capital.</p>
+      </div>
+      <div class="card" id="event_30">
         <h3>Child Number 6!</h3>
         <p>2020 - gives birth to a beautiful baby girl!</p>
       </div>
-      <div class="card" id="event_29">
+      <div class="card" id="event_31">
         <h3>Pandemic</h3>
         <p>2020 - COVID restrictions get lifted allowing her and her husband and baby girl to get sealed together in the Jordan River Temple</p>
       </div>
-      <div class="card" id="event_30">
+      <div class="card" id="event_33">
         <h3>Finally a Real Honeymoon</h3>
-        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado</p>
+        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  Ironically enough </p>
+        <figure>
+          <img class="scans" src="assets/miracles_front.jpeg"></img>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <img class="scans" src="assets/miracles_back.jpeg"></img>
+          <figcaption></figcaption>
+        </figure>
+
       </div>
-      <div class="card" id="event_31">
+      <div class="card" id="event_33">
         <h3>Deployment</h3>
         <p>2021 - persists through mothering, step-mothering, and schooling alone while husband deploys with the Army</p>
       </div>
-      <div class="card" id="event_32">
+      <div class="card" id="event_34">
         <h3>More Tragedy</h3>
         <p>2021 - remains strong during the loss of her father-in-law, with whom she had a very close relationship</p>
       </div>
-      <div class="card" id="event_33">
+      <div class="card" id="event_35">
         <h3>Conquering</h3>
         <p>2021 - Finishes last prerequisite for nursing school just short of an 'A' even while she and her family were plagued by COVID-19 for a month.</p>
       </div>
