adds titles to every section

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2013 - gave birth to her daughter</p>
       </div>
       <div class="card" id="event_14">
-        <h3></h3>
+        <h3>Pathways</h3>
         <p>2018 - attended Pathways - BYU-Idaho college, began new job working at the Jordan River Temple as well as started teaching Ballet at a local Ballet studio.</p>
       </div>
       <div class="card" id="event_15">
-        <h3></h3>
+        <h3>LDS Business College</h3>
         <p>2019 - attended LDS Business College for 3 semesters</p>
       </div>
       <div class="card" id="event_16">
@@ -145,19 +145,19 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2019 - becomes a step-parent to three beautiful girls</p>
       </div>
       <div class="card" id="event_20">
-        <h3></h3>
+        <h3>Westward HO!</h3>
         <p>2019 - lived in West Jordan, Utah</p>
       </div>
       <div class="card" id="event_21">
-        <h3></h3>
-        <p>2019 - Her husband's car breaks down so for three months they have to take turns taking the car to work or school while the other takes the train</p>
+        <h3>Oh Lugnuts!</h3>
+        <p>2019 - Her husband's car breaks down so for three months, over three separate repairs, they have to take turns taking the car to work or school while the other takes the train</p>
       </div>
       <div class="card" id="event_22">
         <h3>Tragedy</h3>
         <p>2020 - Hold's her sister's hand as she struggles with the loss of her second child</p>
       </div>
       <div class="card" id="event_23">
-        <h3></h3>
+        <h3>A Room with a View</h3>
         <p>2020 - gives up her lovely 3rd story apartment with a view of the mountains for a basement apartment with cheaper rent and larger space</p>
       </div>
       <div class="card" id="event_24">
@@ -173,11 +173,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </figure>
       </div>
       <div class="card" id="event_25">
-        <h3></h3>
+        <h3>You're Prego?!?!</h3>
         <p>2020 - finds out that 5 months into her marriage, amidst adjusting to a new family, she will be bringing child number 6 into her your's-mine-and-ours family</p>
       </div>
       <div class="card" id="event_26">
-        <h3></h3>
+        <h3>SLC</h3>
         <p>2020 - began school at Salt Lake Community College to prepare for Nursing School.</p>
       </div>
       <div class="card" id="event_27">
