addes new assets and puts them into the HTML flow

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_16">
         <h3>New Love</h3>
         <p>2019 - meets the love of her life</p>
+        <figure>
+          <img class="img-proclamation" src="assets/IMG_3849.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
       </div>
       <div class="card" id="event_17">
         <h3>Engagement</h3>
@@ -155,10 +159,18 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2019 - just two days short of two months after meeting,
           she and her husband get married in the bishop's office with only her,
           her husband, the bishop, and her two children attendng.</p>
+
       </div>
       <div class="card" id="event_19">
-        <h3>New Family</h3>
+        <h3>A (New) Family: a Proclamation!</h3>
         <p>2019 - becomes a step-parent to three beautiful girls</p>
+        <figure>
+          <img class="img-proclamation" src="assets/family_proclamation.png"></img>
+          <figcaption>The Family: A Proclamation To The World, states that marriage  between a man and a woman is ordained of God
+            and that the family is central to the Creator's plan for the eternal destiny of his children.
+            And boy were we excited to become a real, eternal family.  Plus, that way Alec and Katherine would
+            have to stop trying to tell us we hadn't actually gotten married in the first place.  We only "kind of" got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
+        </figure>
       </div>
       <div class="card" id="event_20">
         <h3>Westward HO!</h3>
@@ -222,6 +234,10 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_30">
         <h3>Child Number 6!</h3>
         <p>2020 - gives birth to a beautiful baby girl!</p>
+        <figure>
+          <img class="img-hospital" src="assets\BrooklynnOnMama.jpg"></img>
+          <figcaption></figcaption>
+        </figure>
       </div>
       <div class="card" id="event_31">
         <h3>A Family! Ordained of God</h3>
@@ -229,14 +245,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           Restrictions were such that only one family could be in the temple at a time, leaving the temple a virtual ghost town,
           and letting have a wonderful, private experience in the celestial room.
         </p>
-
         <figure>
-          <img src="assets/family_proclamation.png"></img>
-          <figcaption>The Family: A Proclamation To The World, states that marriage  between a man and a woman is ordained of God
-            and that the family is central to the Creator's plan for the eternal destiny of his children.
-            And boy were we excited to become a real, eternal family.  Plus, that way Alec and Katherine would
-            have to stop trying to tell us we hadn't actually gotten married in the first place.  We only "kind of" got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
+          <img class="img-reception" src="assets/CEA_1781.jpg"></img>
+          <figcaption></figcaption>
         </figure>
+
 
         <p> Brooklyn was also able to attend.  A dear friend of Diana's watched her during the ceremony, which was a good thing,
           because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quite as a church mouse.
