--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>Seven Brides in Mormon Country</h3>
         <p>2006 - performed in "Seven Brides for Seven Brothers", her first musical
           for the St. George Musical Theater. This was the beginning
-        of her performing regularly for the theater for the next 2 years. Also,
+        of her performing regularly for the theater for the next 2 years. She also
         started teaching dance at a local studio which was the start of her teaching of 15+ years.</p>
       </div>
       <div class="card" id="event_8">
         <h3>Student of the Year (was there ever any question?)</h3>
         <p>2007 - attended Dixie State College in St. George, Utah for two semesters.
-          She majored in Dance and was a member of the Dance Company.
-          She also won the student of the year award for the Dance Department.</p>
+          She majored in Dance and was a member of the Dance Company where she won the "Student of the Year" award in the Dance Department.</p>
       </div>
       <div class="card" id="event_9">
         <h3>Marriage</h3>
@@ -145,7 +144,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>New Love</h3>
         <p>2019 - meets the love of her life</p>
         <figure>
-          <img class="img-proclamation" src="assets/IMG_3849.JPG"></img>
+          <img class="img-road-trip" src="assets/IMG_3849.JPG"></img>
           <figcaption></figcaption>
         </figure>
       </div>
@@ -166,7 +165,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2019 - becomes a step-parent to three beautiful girls</p>
         <figure>
           <img class="img-proclamation" src="assets/family_proclamation.png"></img>
-          <figcaption>The Family: A Proclamation To The World, states that marriage  between a man and a woman is ordained of God
+          <figcaption class="fig-cation-19">The Family: A Proclamation To The World, states that marriage  between a man and a woman is ordained of God
             and that the family is central to the Creator's plan for the eternal destiny of his children.
             And boy were we excited to become a real, eternal family.  Plus, that way Alec and Katherine would
             have to stop trying to tell us we hadn't actually gotten married in the first place.  We only "kind of" got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
@@ -215,11 +214,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_27">
         <h3>Natural Disaster</h3>
-        <p>2020 - survives a 6.5 earthquake. Deseret News would report, 'An early morning 5.7 magnitude earthquake centered
+        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <em>'An early morning 5.7 magnitude earthquake centered
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
-          but perhaps miraculously, no fatalities or serious injuries resulted.'</p>
+          but perhaps miraculously, no fatalities or serious injuries resulted.'</em></p>
       </div>
       <div class="card" id="event_28">
         <h3>Riots</h3>
@@ -247,7 +246,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </p>
         <figure>
           <img class="img-reception" src="assets/CEA_1781.jpg"></img>
-          <figcaption></figcaption>
+          <figcaption class="fig-caption-31"></figcaption>
         </figure>
 
 
