--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </figure>
       </div>
       <div class="card" id="event_33">
-        <h3>Deployment</h3>
+        <h3>Deployment X 3</h3>
         <p>2021 - persists through mothering, step-mothering, and schooling alone while husband deploys with the Army</p>
       </div>
       <div class="card" id="event_34">
