--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   <div id="img-div" class="img-div">
     <img id="image" src="assets\PrincessDiBW.jpg" />
-    <caption id="img-caption" class="img-caption">Diana holds her sweet new born baby. She is known to all as a diligent and doting mother.</caption>
+    <caption id="img-caption" class="img-caption">Diana holds her sweet newborn baby. She is known to all as a diligent and doting mother.</caption>
   </div>
   <div class="container">
     <p id="tribute-info" class="tribute-info">Diana is many things, including the following:</p>
@@ -80,7 +80,8 @@
       </div>
       <div class="card" id="event_5">
         <h3>High School</h3>
-        <p>2004 - graduated from Bonanza High School in Las Vegas, NV. Taught dance with Kathy Bunker at Bunker Dance Center for one year. Her friendship with Kathy is still alive today, a testament to the kind, sweet people both Diana and Kathy are.  Bunker Dance Studio alumni include Aaron Turner (So You Think You Can Dance, season 10),
+        <p>2004 - graduated from Bonanza High School in Las Vegas, NV. Taught dance with Kathy Bunker at Bunker Dance Center for one year. Her friendship with Kathy is still alive today,
+          a testament to the kind, sweet people both Diana and Kathy are.  Bunker Dance Studio alumni include Aaron Turner (So You Think You Can Dance, season 10),
 Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha (Judges on So You Think You Can Dance), Stacey Tookey, and Peter Chu</p>
         <figure>
           <img class="bengal" src="./assets/default_news.png"></img>
@@ -102,7 +103,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_8">
         <h3>Student of the Year (was there ever any question?)</h3>
         <p>2007 - attended Dixie State College in St. George, Utah for two semesters.
-          She majored in Dance and was a member of the Dance Company where she won the "Student of the Year" award in the Dance Department.</p>
+          She majored in Dance and was a member of the Dance Company where she won the 	&#8220;Student of the Year&#8221; award in the Dance Department.</p>
       </div>
       <div class="card" id="event_9">
         <h3>Marriage</h3>
@@ -165,10 +166,10 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2019 - becomes a step-parent to three beautiful girls</p>
         <figure>
           <img class="img-proclamation" src="assets/family_proclamation.png"></img>
-          <figcaption class="fig-cation-19">The Family: A Proclamation To The World, states that marriage  between a man and a woman is ordained of God
-            and that the family is central to the Creator's plan for the eternal destiny of his children.
+          <figcaption class="fig-cation-19">The Family: A Proclamation To The World, states that 	&#8220; marriage  between a man and a woman is ordained of God
+            and that the family is central to the Creator's plan for the eternal destiny of his children.&#8221;
             And boy were we excited to become a real, eternal family.  Plus, that way Alec and Katherine would
-            have to stop trying to tell us we hadn't actually gotten married in the first place.  We only "kind of" got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
+            have to stop trying to tell us we hadn't actually gotten married in the first place.  We only &#8220;kind of&#8221; got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
         </figure>
       </div>
       <div class="card" id="event_20">
@@ -214,11 +215,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_27">
         <h3>Natural Disaster</h3>
-        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <em>'An early morning 5.7 magnitude earthquake centered
+        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <em>	&#8220;An early morning 5.7 magnitude earthquake centered
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
-          but perhaps miraculously, no fatalities or serious injuries resulted.'</em></p>
+          but perhaps miraculously, no fatalities or serious injuries resulted.&#8221;</em></p>
       </div>
       <div class="card" id="event_28">
         <h3>Riots</h3>
@@ -257,7 +258,8 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_33">
         <h3>Finally a Real Honeymoon</h3>
-        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  It would an amazing time of friendship, bonding, adventure, scary heights, wonderful food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
+        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  It would an amazing time of friendship, bonding, adventure, scary heights,
+          wonderful food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
         <figure>
           <img class="scans" src="assets/miracles_front.jpeg"></img>
           <figcaption>I bought this card for Diana as an after thought at the grocery store, but it became a great scratch pad for us to record all the wonderful memories we had!</figcaption>
@@ -278,7 +280,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_35">
         <h3>Conquering</h3>
-        <p>2021 - Finishes last prerequisite for nursing school just short of an 'A' even while she and her family were plagued by COVID-19 for a month.</p>
+        <p>2021 - Finishes last prerequisite for nursing school just short of an 	&#8220;A&#8221; even while she and her family were plagued by COVID-19 for a month.</p>
       </div>
     </main>
       </div>
