--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       </div>
       <div class="card" id="event_2">
         <h3>The Spark Ignites</h3>
-        <p>1988 - at just three years of age, Diana takes her first dancing class.  This sparks an interest that will quickly flame into a passionate fire that will fuel her 'till this day.</p>
+        <p>1988 - at just three years of age, Diana takes her first dancing class.  This sparks an interest that will quickly flame into a passionate fire that will fuel her &#8217;till this day.</p>
       </div>
       <div class="card" id="event_3">
         <h3>Early Life</h3>
-        <p>1990 - Diana's family moved to Las Vegas, Nevada where she grew up.</p>
+        <p>1990 - Diana&#8217;s family moved to Las Vegas, Nevada where she grew up.</p>
         <div class="vegas">
           <img src="./assets/Las_Vegas_City_Map_Panoramic_Graphic_Art.jpg" class="img-vegas">
         </div>
@@ -151,13 +151,13 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_17">
         <h3>Engagement</h3>
-        <p>2019 - one month later he couldn't wait any longer,
+        <p>2019 - one month later he couldn&#8217;t wait any longer,
           so underneath a star-filled, summer night, on the backyard trampoline he proposes to her</p>
       </div>
       <div class="card" id="event_18">
         <h3>Marriage</h3>
         <p>2019 - just two days short of two months after meeting,
-          she and her husband get married in the bishop's office with only her,
+          she and her husband get married in the bishop&#8217;s office with only her,
           her husband, the bishop, and her two children attendng.</p>
 
       </div>
@@ -167,9 +167,9 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <figure>
           <img class="img-proclamation" src="assets/family_proclamation.png"></img>
           <figcaption class="fig-cation-19">The Family: A Proclamation To The World, states that 	&#8220; marriage  between a man and a woman is ordained of God
-            and that the family is central to the Creator's plan for the eternal destiny of his children.&#8221;
+            and that the family is central to the Creator&#8217;s plan for the eternal destiny of his children.&#8221;
             And boy were we excited to become a real, eternal family.  Plus, that way Alec and Katherine would
-            have to stop trying to tell us we hadn't actually gotten married in the first place.  We only &#8220;kind of&#8221; got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
+            have to stop trying to tell us we hadn&#8217;t actually gotten married in the first place.  We only &#8220;kind of&#8221; got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
         </figure>
       </div>
       <div class="card" id="event_20">
@@ -178,12 +178,12 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_21">
         <h3>Oh Lugnuts!</h3>
-        <p>2019 - Her husband's car breaks down so for three months, over three separate repairs,
+        <p>2019 - Her husband&#8217;s car breaks down so for three months, over three separate repairs,
           they have to take turns taking the car to work or school while the other takes the train</p>
       </div>
       <div class="card" id="event_22">
         <h3>Tragedy</h3>
-        <p>2020 - Hold's her sister's hand as she struggles with the loss of her second child</p>
+        <p>2020 - Hold&#8217;s her sister&#8217;s hand as she struggles with the loss of her second child</p>
       </div>
       <div class="card" id="event_23">
         <h3>A Room with a View</h3>
@@ -198,16 +198,16 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <video class="covid" autoplay muted playsinline loop poster="assets/23311.jpg">
             <source src="assets/Element-coronavirus_32s-background-1080.mp4"
                     type="video/mp4">
-            Sorry, your browser doesn't support embedded videos.
+            Sorry, your browser doesn&#8217;t support embedded videos.
         </video>
         <figcaption>Animated COVID-19 virus with a dark background.
-          Animation provided by Centers of Disease Control (CDC), 'https://www.cdc.gov/media/b_roll.html.' Used under public domain.</figcaption>
+          Animation provided by Centers of Disease Control (CDC), &#8220;https://www.cdc.gov/media/b_roll.html&#8221; Used under public domain.</figcaption>
       </figure>
       </div>
       <div class="card" id="event_25">
-        <h3>You're Prego?!?!</h3>
+        <h3>You&#8217;re Prego?!?!</h3>
         <p>2020 - finds out that 5 months into her marriage, amidst adjusting to a new family,
-          she will be bringing child number 6 into her your's-mine-and-ours family</p>
+          she will be bringing child number 6 into her your&#8217;s-mine-and-ours family</p>
       </div>
       <div class="card" id="event_26">
         <h3>SLC</h3>
@@ -229,7 +229,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_29">
         <h3>Presidential Elections</h3>
         <p>Presidential Elections would be historic in seeing the first Black woman Vice-President,
-          but would also lead to a near coup d'é·tat as rioters ransacked the nations capital.</p>
+          but would also lead to a near coup d&#8217;é·tat as rioters ransacked the nations capital.</p>
       </div>
       <div class="card" id="event_30">
         <h3>Child Number 6!</h3>
@@ -251,7 +251,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </figure>
 
 
-        <p> Brooklyn was also able to attend.  A dear friend of Diana's watched her during the ceremony, which was a good thing,
+        <p> Brooklyn was also able to attend.  A dear friend of Diana&#8217;s watched her during the ceremony, which was a good thing,
           because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quite as a church mouse.
           Also attending were Brian and Christina, and Genesis, Maya, and Skylar.</p>
 
