fixes grammar issues

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_6">
         <h3>College</h3>
-        <p>2005 - attended Utah Valley State College in Orem, Utah for one semester.
+        <p>2005 - attended a semester at Utah Valley State College in Orem, Utah.
           Majored in Dance and was a member of the Dance Team.  Was part of the Dance team that placed NDA 9th place Division 2-Team Dance.</p>
       </div>
       <div class="card" id="event_7">
@@ -98,7 +98,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2006 - performed in "Seven Brides for Seven Brothers", her first musical
           for the St. George Musical Theater. This was the beginning
         of her performing regularly for the theater for the next 2 years. She also
-        started teaching Dance at a local studio, the beginning of 15+ years of teaching.</p>
+        started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
       </div>
       <div class="card" id="event_8">
         <h3>Student of the Year (was there ever any question?)</h3>
@@ -150,13 +150,13 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_17">
         <h3>Engagement</h3>
         <p>2019 - only one month later, he couldn&#8217;t wait any longer,
-          so underneath a star-filled summer night, on the backyard trampoline he proposes to love of his life!</p>
+          so underneath a star-filled summer night, on the backyard trampoline, he proposes to the love of his life!</p>
       </div>
       <div class="card" id="event_18">
         <h3>Marriage</h3>
         <p>2019 - just two days short of two months after meeting,
           she and her husband get married in the bishop&#8217;s office with only her,
-          her husband, the bishop, and her two children attended.</p>
+          her husband, the bishop, and her two children attending.</p>
 
       </div>
       <div class="card" id="event_19">
@@ -191,7 +191,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>Pandemic</h3>
         <p>2020 - the pandemic forces her to learn to home school her children,
           while getting cut off from her own professors and having to pivot to a virtual school environment.
-          Eventually her daughter would contract it, then herself and her husband, then her mother-in-law, creating a full month of quarantine.</p>
+          Eventually, her daughter would contract it, then herself and her husband, then her mother-in-law, creating a full month of quarantine.</p>
         <figure>
           <video class="covid" autoplay muted playsinline loop poster="assets/23311.jpg">
             <source src="assets/Element-coronavirus_32s-background-1080.mp4"
@@ -213,7 +213,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_27">
         <h3>Natural Disaster</h3>
-        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <em>	&#8220;An early morning 5.7 magnitude earthquake centered
+        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <em>&#8220;An early-morning, 5.7 magnitude earthquake centered
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
@@ -222,12 +222,14 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_28">
         <h3>Riots</h3>
         <p>In the wake of the George Floyd killings, riots would erupt across the entire United States.
-          For the first time in memory, rioters would hit Salt Lake City where police cars would be overturned and set on fire, looters would be threatened by a mad man with a bow and arrow, and in Provo an elderly man would be shot repeatedly by rioters as he tried to maneuver past a road block.</p>
+          For the first time in memory, rioters would hit Salt Lake City, where police cars would be overturned and set on fire,
+          looters would be threatened by a mad man with a bow and arrow,
+          and in Provo, an elderly man would be shot repeatedly by rioters as he tried to maneuver past a roadblock.</p>
       </div>
       <div class="card" id="event_29">
         <h3>Presidential Elections</h3>
         <p>Presidential Elections would be historic in seeing the first Black woman Vice-President,
-          but would also lead to a near coup d&#8217;é·tat as rioters ransacked the nations capital.</p>
+          but would also lead to a near coup d&#8217;é·tat as rioters ransacked the capital of the nation.</p>
       </div>
       <div class="card" id="event_30">
         <h3>Child Number 6!</h3>
@@ -239,28 +241,25 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_31">
         <h3>A Family! Ordained of God</h3>
-        <p>2020 - COVID restrictions, finally letting these two sweet lovebirds the chance to be sealed in the Jordan River Temple.
-          Restrictions were such that only one family could be in the temple at a time, leaving the temple a virtual ghost town,
-          and letting have a wonderful, private experience in the celestial room.
+        <p>2020 - COVID restrictions, finally letting these two sweet lovebirds have the chance to be sealed in the Jordan River Temple.
+          Restrictions were such that only one family could be in the temple at a time, leaving the temple a virtual ghost town
+          and letting them have a wonderful, private experience in the celestial room.
         </p>
         <figure>
           <img class="img-reception" src="assets/CEA_1781.jpg"></img>
           <figcaption class="fig-caption-31"></figcaption>
         </figure>
-
-
-        <p> Brooklyn was also able to attend.  A dear friend of Diana&#8217;s watched her during the ceremony, which was a good thing,
-          because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quite as a church mouse.
-          Also attending were Brian and Christina, and Genesis, Maya, and Skylar.</p>
-
+        <p> Brooklyn was also able to attend.  A dear friend of Diana&#8217;s watched her during the ceremony, which was a good thing
+          because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quiet as a church mouse.
+          Also attending were Brian and Christina and Genesis, Maya, and Skylar.</p>
       </div>
       <div class="card" id="event_33">
-        <h3>Finally a Real Honeymoon</h3>
-        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  It would an amazing time of friendship, bonding, adventure, scary heights,
+        <h3>Finally, a Real Honeymoon</h3>
+        <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  It would be an amazing time of friendship, bonding, adventure, scary heights,
           wonderful food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
         <figure>
           <img class="scans" src="assets/miracles_front.jpeg"></img>
-          <figcaption>I bought this card for Diana as an after thought at the grocery store, but it became a great scratch pad for us to record all the wonderful memories we had!</figcaption>
+          <figcaption>I bought this card for Diana as an afterthought at the grocery store, but it became a great scratchpad for us to record all the beautiful memories we had!</figcaption>
         </figure>
 
         <figure>
@@ -278,7 +277,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_35">
         <h3>Conquering</h3>
-        <p>2021 - Finishes last prerequisite for nursing school just short of an 	&#8220;A&#8221; even while she and her family were plagued by COVID-19 for a month.</p>
+        <p>2021 - Finishes the last prerequisite for nursing school just short of an 	&#8220;A&#8221; even while she and her family were plagued by COVID-19 for a month.</p>
       </div>
     </main>
       </div>
