fixes issues that were out of chronological order

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <img src="assets/Capture.JPG"><img>
         <img src="assets/image_6483441.JPG" id="tuachan_group_selfie"><img>
       </div>
-      <div class="card" id="event_12">
-        <h3>Divorce</h3>
-        <p>2017 - After her divorce, Diana found the strength and courage to create a new life for her and her two children while still showing compassion and caring as a co-parent.</p>
-      </div>
       <div class="card" id="event_13">
         <h3>Second Child</h3>
         <p>2013 - gave birth to her daughter</p>
+      </div>
+      <div class="card" id="event_12">
+        <h3>Divorce</h3>
+        <p>2017 - After her divorce, Diana found the strength and courage to create a new life for her and her two children while still showing compassion and caring as a co-parent.</p>
       </div>
       <div class="card" id="event_14">
         <h3>Pathways</h3>
@@ -213,11 +213,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_27">
         <h3>Natural Disaster</h3>
-        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <em>&#8220;An early-morning, 5.7 magnitude earthquake centered
+        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <blockquote>&#8220;An early-morning, 5.7 magnitude earthquake centered
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
-          but perhaps miraculously, no fatalities or serious injuries resulted.&#8221;</em></p>
+          but perhaps miraculously, no fatalities or serious injuries resulted.&#8221;</blockquote></p>
       </div>
       <div class="card" id="event_28">
         <h3>Riots</h3>
