--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <main>
       <div class="card" id="event_1">
         <h3>Birth</h3>
-        <p>1985: Heavenly Father (and Mother) sent their special warrior Princess to earth to join her family as the oldest daughter, second oldest of 4 siblings.</p>
-        <p>Born in Murray, Utah</p>
+        <p>1985: Heavenly Father (and Mother) send their special warrior Princess to earth to join her family in Murray, Utah.</p>
       </div>
       <div class="card" id="event_2">
         <h3>The Spark Ignites</h3>
@@ -212,8 +211,9 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2020 - began school at Salt Lake Community College to prepare for Nursing School.</p>
       </div>
       <div class="card" id="event_27">
-        <h3>Natural Disaster</h3>
-        <p>2020 - survives a 6.5 earthquake. Deseret News would report, <blockquote>&#8220;An early-morning, 5.7 magnitude earthquake centered
+        <h3>Earthquake !!!</h3>
+        <p>2020 - Diana and Trevor would wake up on the third story to their entire apartment swaying uncontrollably for several minutes.
+          The worst shockwave measured 6.5 earthquake, just 14 miles from their house. Deseret News would report, <blockquote>&#8220;An early-morning, 5.7 magnitude earthquake centered
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
