adds assets, places them, updates content, grammar fixes, fixes size and placement of title, improves design

--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
   </div>
   <div class="container">
     <main>
-      <div class="card" id="event_1">
+      <div class="card first-card" id="event_1">
         <h3>Birth</h3>
-        <p>1985: Heavenly Father (and Mother) send their special warrior Princess to earth to join her family in Murray, Utah.</p>
+        <p class="flush-right">1985: Heavenly Father (and Mother) send their special warrior Princess to earth to join her family in Murray, Utah.</p>
       </div>
       <div class="card" id="event_2">
         <h3>The Spark Ignites</h3>
-        <p>1988 - at just three years of age, Diana takes her first dancing class.  This sparks an interest that will quickly flame into a passionate fire that will fuel her &#8217;till this day.</p>
+        <p>1988 - at just three years of age, Diana takes her first dancing class.  This sparks an interest in dance that will quickly flame into a
+          passionate that burns &#8217;till this day.</p>
       </div>
       <div class="card" id="event_3">
         <h3>Early Life</h3>
@@ -112,11 +113,15 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           for the St. George Musical Theater. This was the beginning
         of her performing regularly for the theater for the next 2 years. She also
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
+        <figure>
+          <img class="img-road-trip" src="assets/18162_274578490681_3484846_n.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
       </div>
       <div class="card" id="event_9">
         <h3>Student of the Year (was there ever any question?)</h3>
         <p>2007 - attended Dixie State College in St. George, Utah, for two semesters.
-          She majored in Dance and was a member of the Dance Company, where she won the 	&#8220;Student of the Year&#8221; award in the Dance Department.</p>
+          She majored in Dance and was a member of the Dance Company, where she won the &#8220;Student of the Year&#8221; award in the Dance Department.</p>
       </div>
       <div class="card" id="event_10">
         <h3>Marriage</h3>
@@ -125,6 +130,10 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_11">
         <h3>Gave birth to her first son</h3>
         <p>2008 - A beautiful soul comes into the world.  And his name shall be ... Alec</p>
+        <figure class="figure-alec">
+          <img src="assets/188767_203145456378102_7058755_n.jpg" class="img-alec"></img>
+        <figcaption class="fig-caption-11 flush-right">Picture of Alec when he was a toddler.  Alec has been a great defender to his Mom and younger siblings.  And he has a very, very special place in his mother's heart.</figcaption>
+      </figure>
       </div>
       <div class="card" id="event_12">
         <h3>Broadway Debut</h3>
@@ -138,6 +147,18 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_13">
         <h3>Second Child</h3>
         <p>2013 - gave birth to her daughter</p>
+        <figure>
+          <img class="img-baby-katherine" src="assets/katherine.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
+        <figure>
+          <img class="img-school-katherine" src="assets/IMG_6249.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
+        <figure>
+          <img class="img-kat-chair" src="assets/KatherineEndGamePhoto.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
       </div>
       <div class="card" id="event_14">
         <h3>Divorce</h3>
@@ -178,7 +199,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           to three beautiful girls who would quickly come to love her kind, fun, and ever-patient influence on them.</p>
         <figure>
           <img class="img-proclamation" src="assets/family_proclamation.png"></img>
-          <figcaption class="fig-cation-19">The Family: A Proclamation To The World, states that 	&#8220; marriage  between a man and a woman is ordained of God
+          <figcaption class="fig-caption-20">The Family: A Proclamation To The World, states that 	&#8220; marriage  between a man and a woman is ordained of God
             and that the family is central to the Creator&#8217;s plan for the eternal destiny of his children.&#8221;
             And boy, were we excited to become a real, eternal family.  Plus, that way, Alec and Katherine would
             have to stop trying to tell us we hadn&#8217;t actually gotten married in the first place.  We only &#8220;kind of&#8221; got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
@@ -186,7 +207,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_21">
         <h3>Westward HO!</h3>
-        <p>2019 - lived in West Jordan, Utah</p>
+        <p>2019 - moved to West Jordan, Utah</p>
       </div>
       <div class="card" id="event_21">
         <h3>Oh, Lugnuts!</h3>
@@ -255,7 +276,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </figure>
       </div>
       <div class="card" id="event_31">
-        <h3>A Family! Ordained of God</h3>
+        <h3>Sealed with a kiss!</h3>
         <p>2020 - COVID restrictions, finally letting these two sweet lovebirds have the chance to be sealed in the Jordan River Temple.
           Restrictions were such that only one family could be in the temple at a time, leaving the temple a virtual ghost town
           and letting them have a wonderful, private experience in the celestial room.
@@ -300,10 +321,8 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </p>
       </div>
     </main>
-        <script src="./js/scripts.js"></script>
-            <script src="./js/button.js"></script>
-            <script src="./js/visibility.js"></script>
-          </body>
-
-
-          </html>
+    <script src="./js/scripts.js"></script>
+    <script src="./js/button.js"></script>
+    <script src="./js/visibility.js"></script>
+    </body>
+</html>
