--- a/index.html
+++ b/index.html
@@ -113,8 +113,12 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           for the St. George Musical Theater. This was the beginning
         of her performing regularly for the theater for the next 2 years. She also
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
+        <figure >
+          <img class="img-seven-brides" src="assets/18162_274578490681_3484846_n.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
         <figure>
-          <img class="img-road-trip" src="assets/18162_274578490681_3484846_n.JPG"></img>
+          <img class="img-road-trip" src="assets/image_6483441_2.JPG"></img>
           <figcaption></figcaption>
         </figure>
       </div>
@@ -149,15 +153,37 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2013 - gave birth to her daughter</p>
         <figure>
           <img class="img-baby-katherine" src="assets/katherine.JPG"></img>
-          <figcaption></figcaption>
+          <figcaption class="flush-right">An adoring mama looks down on baby Katherine while a loving  brother looks on.</figcaption>
         </figure>
         <figure>
           <img class="img-school-katherine" src="assets/IMG_6249.JPG"></img>
-          <figcaption></figcaption>
+          <figcaption class="flush-right">Anyone who knows Katherine knows she's a sassy as she is sweet.  Some of our favorite quotes for her: <br><br>
+  &#8220;Can we not get a Spanish Fork name?&#8221;<br>
+  - when asked what we should name Brooklyn<br>
+  <br>
+  &#8220;Macaroni and Cheese Salad&#8221;<br>
+  - what she called salad with macaroni noodles in it.<br>
+  <br>
+  &#8220;It's not fair the (unborn) baby gets to stay up! She gets to do whatever she wants!&#8221;<br>
+  - when told she needed to go to bed.<br>
+  <br>
+
+  &#8220;Stop saying words! You're going to get in trouble!&#8221;<br>
+  - trying to help her brother, Alec, not get in trouble<br>
+  <br>
+  &#8220;Bed bombs and boom sticks&#8221;<br>
+  - trying to pronounce the movie.<br>
+
+  <br>
+  &#8220;Fight Kitty&#8221;<br>
+  - (pronouncing Fight City, a boxing gym)<br>
+
+
+</figcaption>
         </figure>
         <figure>
           <img class="img-kat-chair" src="assets/KatherineEndGamePhoto.JPG"></img>
-          <figcaption></figcaption>
+          <figcaption class="flush-right">Katherine watches a movie with one of her favorite blankets in the rocking chair Diana rocked her to sleep in so many times as a child.</figcaption>
         </figure>
       </div>
       <div class="card" id="event_14">
@@ -295,7 +321,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           wonderful food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
         <figure>
           <img class="scans" src="assets/miracles_front.jpeg"></img>
-          <figcaption>I bought this card for Diana as an afterthought at the grocery store, but it became a great scratchpad for us to record all the beautiful memories we had!</figcaption>
+          <figcaption class="flush-right">I bought this card for Diana as an afterthought at the grocery store, but it became a great scratchpad for us to record all the beautiful memories we had!</figcaption>
         </figure>
 
         <figure>
@@ -304,8 +330,8 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </figure>
       </div>
       <div class="card" id="event_33">
-        <h3>Deployment X 3</h3>
-        <p>2021 - persists through mothering, step-mothering, and schooling alone while husband deploys with the Army</p>
+        <h3>Deployment X 4</h3>
+        <p>2021 - Diana persists through mothering, step-mothering, and schooling alone while husband deploys with the Army four times.  Once for three weeks to Ft. Sam Houston for ALC training. Twice for COVID-19, which although were still local, basically made him work another full-time job.  And finally, was the almost-to-Afghanistan deployment where we went through all the physical, mental and emotional prepartion, but two day's before boots-on-the-ground the President pulled out.</p>
       </div>
       <div class="card" id="event_34">
         <h3>More Tragedy</h3>
@@ -314,6 +340,14 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_35">
         <h3>Conquering</h3>
         <p>2021 - Finishes the last prerequisite for nursing school just short of an 	&#8220;A&#8221; even while she and her family were plagued by COVID-19 for a month.</p>
+      </div>
+      <div class="card" id="event_36">
+        <h3>And the Show Must Go On!</h3>
+        <p>Although the last two years I have spent with this true princess and sweet daughter of Heavenly Parents have had the highest concentration of external pressure I've ever known, there is no other person I would rather make this journey with.  She is truly the kindest, most amazing person I have ever known.  I love you Sweetheart!</p>
+        <figure>
+          <img class="img-balance-rock" src="assets/IMG_4198.JPG"></img>
+          <figcaption></figcaption>
+        </figure>
       </div>
       </div>
       <div>
